--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 <div id="Cultura-Culinaria">
                     <h2><strong>Cultura Culinaria</strong></h2>
                     <p>Los invitamos a ver el siguiente video sobre Cultura Culinaria China</p>
-                    <iframe width="560" height="315" src="https://youtu.be/93XteRjcHvc?si=xbEp-7gOOVtBkn-f" frameborder="0" allowfullscreen></iframe> 
+                     <iframe width="560" height="315" src="https://www.youtube.com/embed/93XteRjcHvc?si=39aLRAp1NGRY1VYm" title="YouTube video player" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen></iframe> 
 
                 </div>
 
